--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=users-service
+server.port=8082
+
+spring.datasource.url=jdbc:mysql://localhost:3306/plazoleta
+spring.datasource.username=root
+spring.datasource.password=
+logging.level.org.springframework.web=DEBUG
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+appDescription= "Pragma reto backend"
+appVersion= "1.0.0"
