--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=users-service
 server.port=8082
 
-spring.datasource.url=jdbc:mysql://localhost:3306/plazoleta
+spring.datasource.url=jdbc:mysql://localhost:3306/users_db
 spring.datasource.username=root
 spring.datasource.password=
 logging.level.org.springframework.web=DEBUG
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+logging.level.org.springframework.security=DEBUG
+springdoc.api-docs.path=/api-docs
 appDescription= "Pragma reto backend"
 appVersion= "1.0.0"
