--- a/pom.xml
+++ b/pom.xml
@@ -148,17 +148,37 @@
 				</configuration>
 			</plugin>
 			<plugin>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.8.12</version>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>prepare-agent</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.12</version>
+				<configuration>
+					<excludes>
+						<exclude>**/mapper/**</exclude>
+						<exclude>**/application/mapper/**</exclude>
+						<exclude>**/infraestructure/out/jpa/mapper/**</exclude>
+						<exclude>**/dto/**</exclude>
+						<exclude>**/spi/**</exclude>
+						<exclude>**/api/**</exclude>
+						<exclude>**/repository/**</exclude>
+						<exclude>**/*.test</exclude>
+						<exclude>**/generated/**</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
