--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ logging.level.org.springframework.security=DEBUG
 springdoc.api-docs.path=/api-docs
 appDescription= "Pragma reto backend"
 appVersion= "1.0.0"
+access.token.secret=${ACCESS_TOKEN_SECRET}
